# VPES-Homework-Solutions

HW2/solution/: CMakeLists.txt  exor.h  exor_main.cpp  nand.h  stim.h
HW3/solution/: CMakeLists.txt  state_machine.cpp  state_machine.h
HW4/solution_1/: main.cpp  transition.h
HW4/solution_2/: main.cpp  place.h  transition.h
HW4/solution_3/: CMakeLists.txt  main.cpp  place.h  transition.h
HW4/solution_4/: main.cpp
HW4/solution_5/: main.cpp  subnet.h  transition.h
HW5/solution/: CMakeLists.txt  kpn.cpp  kpn.h  main.cpp
HW6/solution-task2/: bus.h  memory.h
HW6/solution-task3/: CMakeLists.txt  main.cpp  memory.h  processor.h  results.xlsx
